general.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  overflow-x: hidden;
}

body {
  font-family: "Inter", sans-serif;
  line-height: 30px;
  font-size: 18px;
  font-weight: 400;
  letter-spacing: -0.02em;
  color: #212529;

  background-color: #fff;
}

/**********************/
/* REUSABLE */
/**********************/

.pad {
  padding: 140px 220px;
}

.client-pad {
  padding: 60px 40px;
}

/**********************/
/* HEADER */
/**********************/
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;

  height: 92px;
  padding: 16px 220px;
}

.logo {
  width: 191px;
  height: 34px;
}

/**********************/
/* NAVIGATION */
/**********************/
.menu {
  display: flex;
  align-items: center;
  gap: 75px;
  height: 60px;
}

.main-nav-list {
  list-style: none;
  display: flex;
  gap: 32px;
}

.main-nav-link {
  text-decoration: none;
  align-items: center;
  color: #4f9cf9;
}

.main-nav-link:hover,
.main-nav-link:active {
  font-weight: 500;
}

.chevron {
  transform: translate(+30%, -100%);
  width: 9px;
  height: 4px;
}

/**********************/
/* NAVIGATION BUTTONS*/
/**********************/

.btn-block {
  display: flex;
  gap: 24px;
  text-align: center;
  justify-content: center;
}

.btn-login {
  padding: 18.5px 40px;
  background-color: #ffe492;
  border: none;
  border-radius: 8px;

  font-family: inherit;
  font-size: 18px;
  font-weight: 500;
  color: #043873;
}

.btn {
  padding: 18.5px 24px;
  background-color: #4f9cf9;
  border: none;
  border-radius: 8px;

  font-family: inherit;
  font-size: 18px;
  font-weight: 500;
  color: #fff;
}

.btn-login:hover,
.btn-login:active,
.btn:hover,
.btn:active,
.btn-light:hover {
  cursor: pointer;
  /* box-shadow: ; */
  transform: translateY(-3px);
}

.arrow {
  margin-left: 10px;
}

/**********************/
/* HERO SECTION */
/**********************/

.hero {
  height: 830px;
  position: relative;
}

.hero-img {
  opacity: 0.3;
  margin: 192px 0 90px 0;
  z-index: 0;
  order: 1;
}

.hero-block {
  position: absolute;
  display: flex;
  top: 140px;
  bottom: 140px;
  left: 220px;
  right: 220px;
  z-index: 1;

  width: 1480px;
  height: 549px;
  order: 0;
}

.hero-heading {
  margin: 94px 0;
}

.heading {
  font-size: 64px;
  font-weight: 700;
  color: #4f9cf9;
  line-height: 77px;
  align-self: stretch;
  margin-bottom: 24px;
}

.hero-text {
  color: #4f9cf9;
  margin-bottom: 60px;
}

/**********************/
/* WORK-MANAGEMENT SECTION */
/**********************/

.work-management {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 100px;
}

.proj-img {
  position: absolute;
  z-index: 0;
  mix-blend-mode: multiply;
  opacity: 0.2;
  left: 0%;
  right: 85%;
  top: 16.5%;
  bottom: 23%;
}

.content0-block {
  display: flex;
  z-index: 1;
}

.content0 {
  margin: 68px 60px 68px 0;
}

.headline {
  position: relative;
  font-weight: 700;
  font-size: 72px;
  line-height: 87px;
  margin-bottom: 24px;
  z-index: 1;
}

.yellow-underline {
  position: absolute;
  z-index: -1;
  left: 0%;
  right: -1%;
  top: 66%;
  transform: matrix(1, 0, 0.01, 1, 0, 0);
}

.text {
  margin-bottom: 60px;
}

.work-content {
  display: flex;
  gap: 100px;
  z-index: 1;
}

.content1 {
  margin: 183.5px 0;
  position: relative;
}

.yellow-underline1 {
  position: absolute;
  z-index: -1;
  left: 33%;
  right: 24.27%;
  top: 66%;
  bottom: 50%;
}

/**********************/
/* CUSTOMISE SECTION */
/**********************/
.customise {
  display: flex;
}

.customise-heading {
  margin: 49px 98px 49px 0;
  position: relative;
}

.yellow-underline2 {
  position: absolute;
  z-index: -1;
  left: 24%;
  right: 37%;
  top: 82.5%;
  bottom: 20%;
}

/**********************/
/* PRICING SECTION */
/**********************/

.pricing-heading {
  display: flex;
  position: relative;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0 251px;
  margin-bottom: 60px;
}

.yellow-underline3 {
  position: absolute;
  z-index: -1;
  left: 49%;
  right: 29%;
  top: 67%;
  bottom: 40%;
}

.pricing-heading .text {
  text-align: center;
}

.price-list {
  display: flex;
  gap: 32px;
  padding: 0 63.5px;
}

.price-board {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 25px;
  padding: 40px 28px;
  border: solid 1px #ffe492;
  border-radius: 10px;
  width: 472.33px;
  height: 634px;
}

.text-block {
  display: flex;
  flex-direction: column;
  gap: 25px;
}

.price-txt {
  font-weight: 600;
  font-size: 24px;
  line-height: 36px;
}

.price {
  font-weight: 700;
  font-size: 36px;
  line-height: 43.5px;
}

.price-description {
  font-weight: 500;
  line-height: 23px;
}

.point {
  display: flex;
  align-items: center;
  gap: 19px;
}

ul {
  list-style: none;
}

.black-icon {
  width: 18.01px;
  height: 18.01px;
}

.bullet-point-list li {
  font-size: 16px;
  line-height: 20px;
}

.bullet-point-list {
  display: flex;
  flex-direction: column;
  gap: 28px;
}

.btn-yel {
  padding: 16px 40px;
  background-color: #fff;
  border: solid 1px #ffe492;
  border-radius: 8px;

  font-family: inherit;
  font-weight: 500;
  font-size: 16px;
  line-height: 19px;
}

.btn-yel:hover {
  cursor: pointer;
  box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.08);
}

.price-board:hover,
.price-board:active {
  border: none;
  color: #043873;
  box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.08);
  transform: translateY(-63.5px);
  height: 761px;
}

.price-board:hover .point li {
  font-size: 18px;
  font-weight: 500;
  line-height: 23px;
}

/* არ არის დასრულებული ეს */
.price-board:hover .black-icon::before {
  display: inline-block;
  content: url(Resources/pricing/Icon.png);
}

.price-board:hover .btn-yel {
  background-color: #4f9cf9;
  border: none;
  color: #fff;
  border: none;
}

/**********************/
/* YOUR WORK SECTION */
/**********************/
.work {
  height: 574px;
  background: #043873;
  position: relative;
}

.work .work-heading {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: #fff;
  align-self: stretch;
}

.work-txt-block {
  position: relative;
  width: 1080px;
}

.blue-underline {
  position: absolute;
  left: 72.76%;
  right: -1%;
  top: 27%;
  bottom: 49%;
  z-index: 0;
}

.work-txt-block .text {
  text-align: center;
}

.background-element {
  position: absolute;
  left: 0;
  top: -185px;
  opacity: 0.2;
  z-index: 0;
}

/**********************/
/* YOUR DATA */
/**********************/
.your-data {
  display: flex;
  align-items: center;
}

.data-heading {
  width: 800px;
  height: 324px;
  top: 28;
  gap: 60px;
}

.data-text-block {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.yellow-underline4 {
  position: absolute;
  z-index: -1;
  left: 30%;
  right: 33%;
  top: 67%;
  bottom: 40%;
}

/**********************/
/* SPONSORS SECTION */
/**********************/
.our-sponsors {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 100px;
}

.yellow-underline5 {
  position: absolute;
  z-index: -1;
  left: 34%;
  right: 33%;
  top: 69%;
  bottom: 40%;
}

.img-block {
  display: flex;
  justify-content: space-between;
  gap: 100px;
  width: 1482px;
}

/**********************/
/* APPS SECTION */
/**********************/
.apps {
  height: 750px;
  background: #043873;
  position: relative;
}

.background-img {
  position: absolute;
  width: 2041.06px;
  height: 700.4px;
  left: -60.03px;
  top: 9.78px;
  z-index: 0;
  opacity: 0.3;
}

.apps-block {
  display: flex;
  gap: 100px;
  z-index: 1;
  color: #fff;
}

/**********************/
/* TESTIMONIAL SECTION */
/**********************/
.testimonial {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
  gap: 60px;
  height: 1042px;
}

.yellow-underline6 {
  position: absolute;
  left: 47.5%;
  right: 39.94%;
  top: 21.32%;
  bottom: 73.89%;
}

.tes-block .headline {
  text-align: center;
  margin-bottom: 60px;
}

.tes-content {
  display: flex;
  gap: 32px;
  width: 1480px;
  height: 480px;
  align-items: center;
}

.client {
  display: flex;
  flex-direction: column;
  gap: 35px;
  align-items: flex-start;
  width: 472px;
  height: 480px;
  background: #ffffff;
  box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.08);
  border-radius: 10px;
}

.client:hover {
  color: #fff;
  background-color: #4f9cf9;
}

.comment {
  width: 350px;
  height: 255px;
}

.avatar {
  margin-bottom: 35px;
}

.name {
  font-size: 18px;
  font-weight: 700;
  line-height: 22px;
}

.name-star {
  display: flex;
  gap: 53px;
}

.star:hover {
  cursor: pointer;
}

.slider {
  display: flex;
  gap: 100px;
}

.btn-slider {
  width: 75px;
  height: 75px;
  border: none;
  border-radius: 50%;
  background: #e6f1fe;
  box-shadow: 0px 4px 50px -15px rgba(0, 0, 0, 0.15);
}

.btn-slider:hover {
  cursor: pointer;
}

/**********************/
/* FOOTER SECTION */
/**********************/

.footer {
  padding: 140px 220px 32px 220px;
  background: #043873;
}

.footer-content {
  position: relative;
  display: flex;
  flex-direction: column;
  gap: 100px;
  justify-content: center;
  align-items: center;
}

.footer-txt-block {
  display: flex;
  gap: 100px;
  align-items: flex-start;
  width: 1480px;
  height: 182px;
  color: #fff;
}

.footer-logo {
  width: 241px;
  height: 120px;
}

.fot-log {
  margin-bottom: 15px;
}

.footer-info {
  display: flex;
  flex-direction: column;
  gap: 15px;
  width: 200px;
  height: 127px;
}

.footer-txt {
  text-decoration: none;
  color: #fff;
  font-size: 16px;
  line-height: 20px;
  font-weight: 400;
}

.btn-text {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 23px;
  width: 265px;
  height: 182px;
}

.footer-h5 {
  font-size: 28px;
  line-height: 36px;
  font-weight: 700;
}

.btn-light {
  padding: 20px, 40px, 20px, 40px;
  background-color: #4f9cf9;
  border: none;
  border-radius: 8px;
  width: 186px;
  height: 60px;

  font-family: inherit;
  font-size: 16px;
  font-weight: 400;
  color: #fff;
}

.line {
  position: absolute;
  border: 1px solid #2e4e73;
  width: 1480px;
  width: 1480px;
  height: 0px;
  left: 0px;
  top: 249.07px;
}

.footer-btm {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 1480px;
  height: 20px;
}

.terms {
  display: flex;
  gap: 60px;
}

.language {
  display: flex;
  gap: 6px;
}

.arrow-down {
  width: 12px;
  height: 6px;
  transform: translate(0%, 120%);
}

.icons {
  display: flex;
  gap: 32px;
}

.icons:hover {
  cursor: pointer;
}

